<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MHMG</string>
    <string name="game_name">移动迷宫</string>
    <string name="exitText">退出游戏</string>
    <string name="beginText">开始游戏</string>
    <string name="setText">游戏设置</string>
    <string name="helpText">游戏帮助</string>
    <string name="aboutText">关于</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
